--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "archy": "^1.0.0",
-    "chalk": "^1.1.1"
+    "chalk": "^1.1.1",
+    "minimist": "^1.2.0"
   }
 }
