--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bin": {
     "npm-scripts-tree": "bin/npm-scripts-tree"
   },
+  "scripts": {
+    "test": "tap test/*.js"
+  },
   "keywords": [
     "npm-scripts"
   ],
@@ -18,7 +21,10 @@
   },
   "dependencies": {
     "archy": "^1.0.0",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "tap": "^5.7.1"
   }
 }
